apps/site/web/static/css/_schedule-v2.scss
/* ... */
// first stop in the list, only display the line going down
.stop-group:first-child .schedule-trip-stop:first-child,
.route-stop-list .route-stop:first-child,
.schedule-v2-timetable-row:nth-child(2) {
  @include stop-bubble-first();
}

// the last stop in the list, don't display the line
.stop-group:last-child .schedule-trip-stop:last-child,
.schedule-v2-timetable-row:last-child {
  @include stop-bubble-last();

  .stop-info {
    border-bottom: 0;
  }
}

.stop-info-column {
  min-width: 8rem;

  &:first-child {
    padding-right: $base-spacing;
  }
}

// trip info parent container
.schedule-trip-info {
  @include make-row();
  border-left: $border;
  border-right: $border;

  @include media-breakpoint-up(md) {
    float: right;
    width: 50%;
  }

  // Add the border to highlight the trip on mobile
  @include media-breakpoint-down(sm) {
    border: $border;
    border-bottom-width: $border-width * 2;
    border-color: $brand-primary;

    .trip-duration {
      border-bottom-color: $brand-primary;
    }
  }
}

.schedule-trip-info-header {
  @extend %table-header;
  @extend %table-row;

  @include media-breakpoint-down(sm) {
    display: none;
  }
}

.schedule-trip-stop,
.collapsed-row {
  @include stop-bubble-row();
}

.route-status,
.trip-duration {
  @extend %table-row;
}

.trip-info {
  .stop-info {
    width: grid-width(10);
  }
}

.trip-info-labels {
  @include stop-bubble-row();
  font-weight: bold;

  .stop-info {
    border-bottom-width: 0;
    padding-bottom: 0;

    @include media-breakpoint-down(xs) {
      display: none;
    }
  }
}

////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////
///// DATE AND DIRECTION FILTER BUTTONS
////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////

.trip-filters {
  // We use flexbox to make the filter buttons display as same
  // height when the headsign is long and text is forced to
  // wrap. Button heights will simply be uneven equal on browsers
  // that do not support flexbox (>1% of our visitors).

  @include media-breakpoint-up(sm) {
    // scss-lint:disable VendorPrefix
    align-items: stretch;
    display: -ms-flexbox;
    display: -webkit-box;
    display: -webkit-flex;
    display: flex;
  }
}

.date-filter,
.direction-filter {
  // scss-lint:disable VendorPrefix
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: flex;
  -ms-flex-direction: column;
  -webkit-flex-direction: column;
  flex-direction: column;
}

.filter-button {
  // scss-lint:disable VendorPrefix
  @extend %button-primary-outline;
  @include clearfix();
  border-radius: $border-radius;
  -webkit-box-flex: 1;
  display: block;
  -ms-flex: 1 1 0%; // specify all 3 to work around IE bug
  -webkit-flex: 1;
  flex: 1;
  height: 100%;
  min-height: 5rem;
  position: relative;
  text-align: left;
  white-space: normal;
  width: 100%;

  @include hover-focus-active() {
    .filter-icon-border {
      border-color: $btn-primary-focus-color;
    }
  }
}

.filter-icon,
.filter-text {
  @include make-col();
  padding-left: 0;
  padding-right: 0;
}

.filter-text {
  float: left;
  max-width: 80%;
}

.filter-icon {
  // scss-lint:disable VendorPrefix
  align-items: center;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: flex;
  float: right;
  height: 100%;
}

.filter-icon-border {
  border: 1px solid $brand-primary;
  border-radius: 50%;
  height: 2rem;
  margin-bottom: 25%;
  margin-top: 25%;
  text-align: center;
  width: 2rem;

  i {
    height: 100%;
    line-height: 2rem;
    margin: -1px auto;
    text-align: center;
    vertical-align: middle;
  }
}

.filter-label {
  font-weight: bold;
  margin-bottom: $space-6;

  @include media-breakpoint-only(xs) {
    margin-bottom: $space-12;
  }
}

.inner-label {
  color: $body-color;
}

.date-filter {
  @include media-breakpoint-only(xs) {
    margin-bottom: $base-spacing;
  }
}

////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////
///// COMMUTER RAIL TIMETABLE
////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////

.schedule-v2-timetable-container {
  border-bottom: $base-spacing-lg solid $brand-primary-darkest;
  max-width: 100%;
  width: 100%;
  overflow-x: scroll;
  overflow-y: hidden;
}

.schedule-v2-timetable-hide-earlier .schedule-v2-timetable-more-col-earlier,
.schedule-v2-timetable-hide-later .schedule-v2-timetable-more-col-later {
  color: $gray-light;
}

.schedule-v2-timetable-time-col,
.schedule-v2-timetable-name-col,
.schedule-v2-timetable-header-col {
  padding: .5rem 1rem;
}

.schedule-v2-timetable-time-col,
.schedule-v2-timetable-header-col {
  text-align: center;
}

.schedule-v2-timetable-time-col,
.schedule-v2-timetable-name-col:not(.schedule-v2-timetable-header-col) {
  background-color: $white;
}

.schedule-v2-timetable-header-col {
  background-color: $brand-primary-darkest;
  border-left: $border-width solid $brand-primary-darkest;
  border-right: $border-width solid $brand-primary-darkest;
  color: $white;
  font-weight: bold;
}

.schedule-v2-timetable-time-col:not([class*="header"]) {
  // Weird bug in firefox -- at some point when the [data-sticky="left"] columns get set to position: absolute
  // inside of horizSticky.js, a dark left and right border appears on each table cell. See bug report at
  // https://app.asana.com/0/111025076443530/298967690426135
  border-bottom: $border;
  border-left-style: hidden;
  border-right-style: hidden;
}

.schedule-v2-timetable-name-col {
  text-align: left;
}

.schedule-v2-timetable-time-col {
  @include media-breakpoint-up(md) {
    min-width: 9rem;
  }
}
/* ... */

